# coursera-heterogeneous

./: .gitignore  CMakeLists.txt  Makefile  README.md  cudatimer.h  wb.h
include/: cudatimer.h  wb.h
linux/: cudatimer.cpp  test_timers.cpp
src/: GenDataMP1.cpp  GenDataMP2.cpp  GenDataMP4.cpp  GenDataMP5.cpp  cudadiag.cu  mp0.cc  mp0.cu  mp1.cu  mp11.cu  mp12.cu  mp2.cu  mp3.cu  mp4.cu  mp5.cu  mp6.cu  mp7.cc
test/: Makefile  mp0.cu
tests/mp1/3/: input0.raw  input1.raw  output.raw
tests/mp11/2/: input.ppm  output.ppm
tests/mp11/3/: input.ppm
tests/mp11/4/: output.ppm
tests/mp11/5/: input.ppm
tests/mp11/6/: output.ppm
tests/mp11/7/: input.ppm  output.ppm
tests/mp12/0/: input0.raw  input1.raw  output.raw
tests/mp12/1/: input0.raw  input1.raw  output.raw
tests/mp12/2/: input0.raw
tests/mp12/3/: output.raw
tests/mp12/4/: input1.raw
tests/mp12/5/: input0.raw  input1.raw  output.raw
tests/mp12/6/: input1.raw  output.raw
tests/mp12/7/: input0.raw  input1.raw  output.raw
tests/mp12/8/: input0.raw  output.raw
tests/mp12/9/: input0.raw
tests/mp1_data/0/: output.raw
tests/mp1_data/1/: input0.raw  input1.raw  output.raw
tests/mp1_data/2/: input0.raw  input1.raw  output.raw
tests/mp1_data/4/: input0.raw  input1.raw  output.raw
tests/mp1_data/5/: input0.raw  input1.raw  output.raw
tests/mp1_grade/0/: input0.raw  input1.raw  output.raw
tests/mp1_grade/1/: input0.raw  input1.raw  output.raw
tests/mp1_grade/2/: input0.raw  input1.raw  output.raw
tests/mp1_grade/4/: input0.raw  input1.raw  output.raw
tests/mp1_grade/5/: input0.raw  input1.raw  output.raw
tests/mp1_grade/6/: input0.raw  input1.raw  output.raw
tests/mp1_grade/7/: input0.raw  input1.raw  output.raw
tests/mp1_grade/8/: input0.raw  input1.raw  output.raw
tests/mp1_grade/9/: input0.raw  input1.raw  output.raw
tests/mp2_data/1/: input1.raw  output.raw
tests/mp2_data/3/: input0.raw  input1.raw
tests/mp2_data/4/: input0.raw  input1.raw
tests/mp2_grade/0/: input0.raw  input1.raw  output.raw
tests/mp2_grade/1/: input0.raw
tests/mp2_grade/2/: input0.raw  input1.raw  output.raw
tests/mp2_grade/3/: output.raw
tests/mp2_grade/4/: output.raw
tests/mp2_grade/5/: input0.raw  input1.raw  output.raw
tests/mp3_data/0/: output.raw
tests/mp3_data/1/: input0.raw  input1.raw  output.raw
tests/mp3_data/2/: input0.raw  input1.raw
tests/mp3_data/3/: input0.raw
tests/mp3_data/4/: input1.raw  output.raw
tests/mp3_grade/0/: input0.raw  input1.raw
tests/mp3_grade/2/: output.raw
tests/mp3_grade/3/: input1.raw  output.raw
tests/mp3_grade/4/: input0.raw
tests/mp3_grade/5/: input0.raw  input1.raw  output.raw
tests/mp3_grade/6/: input0.raw  input1.raw  output.raw
tests/mp3_grade/7/: input0.raw  input1.raw  output.raw
tests/mp3_grade/8/: input0.raw  input1.raw  output.raw
tests/mp3_grade/9/: input0.raw  input1.raw  output.raw
tests/mp4/0/: input0.raw
tests/mp4/1/: input0.raw
tests/mp4/2/: input0.ppm  input0.raw
tests/mp4/3/: input0.ppm  input0.raw  output.raw
tests/mp4/4/: output.ppm  output.raw
tests/mp4/5/: input1.csv
tests/mp4/6/: input0.raw  output.ppm  output.raw
tests/mp4/8/: input0.ppm  input0.raw
tests/mp4/9/: input0.ppm  input0.raw  output.ppm
tests/mp4_data/0/: input.raw  output.raw
tests/mp4_data/1/: input.raw  output.raw
tests/mp4_data/2/: input.raw  output.raw
tests/mp4_data/3/: input.raw  output.raw
tests/mp4_data/4/: input.raw  output.raw
tests/mp4_data/5/: input.raw  output.raw
tests/mp5/0/: input.raw  output.raw
tests/mp5/1/: input.raw  output.raw
tests/mp5/2/: output.raw
tests/mp5/3/: output.raw
tests/mp5/4/: input0.raw
tests/mp5/5/: input.raw  input0.raw  output.raw
tests/mp5/6/: output.raw
tests/mp5/7/: input.raw  input0.raw  output.raw
tests/mp5/8/: output.raw
tests/mp5/9/: input.raw  output.raw
tests/mp5_data/0/: input.raw  output.raw
tests/mp5_data/1/: input.raw  output.raw
tests/mp5_data/2/: input.raw  output.raw
tests/mp5_data/3/: input.raw  output.raw
tests/mp5_data/4/: input.raw  output.raw
tests/mp5_data/5/: input.raw  output.raw
tests/mp6/2/: input.raw  input1.csv  output.ppm  output.raw
tests/mp6/3/: input.raw  input1.csv  output.ppm
tests/mp6/4/: input.raw  input0.ppm  input1.csv  output.raw
tests/mp6/5/: input0.ppm  output.ppm
tests/mp6/6/: input.raw  input0.ppm
tests/mp6/7/: output.ppm
tests/mp6/8/: input.raw  output.ppm
tests/mp6_data/0/: input0.ppm  input1.csv  input1.raw  output.ppm
tests/mp6_data/1/: input0.ppm  input1.csv  input1.raw  output.ppm
tests/mp6_data/2/: input0.ppm  input1.csv  input1.raw  output.ppm
tests/mp6_data/3/: input0.ppm  input1.csv  input1.raw  output.ppm
tests/mp6_data/4/: input0.ppm  input1.csv  input1.raw  output.ppm
tests/mp6_data/5/: input0.ppm  output.ppm
tests/mp7/0/: input0.raw  input1.raw  output.raw
tests/mp7/1/: input.ppm  input0.raw  input1.raw  output.ppm  output.raw
tests/mp7/2/: input0.raw  input1.raw  output.raw
tests/mp7/3/: input0.raw  input1.raw  output.ppm  output.raw
tests/mp7/4/: input.ppm  input0.raw  input1.raw  output.raw
tests/mp7/5/: input0.raw  input1.raw  output.ppm  output.raw
tests/mp7/6/: input.ppm  input0.raw  input1.raw  output.raw
tests/mp7/7/: input0.raw  input1.raw  output.raw
tests/mp7/8/: input.ppm  input0.raw  input1.raw  output.ppm  output.raw
tests/mp7/9/: input.ppm  input0.raw  input1.raw  output.ppm  output.raw
tests/mp8/2/: input1.raw  output.raw
tests/mp8/4/: input0.raw  output.raw
tests/mp8/6/: input0.raw
tests/mp8/8/: input1.raw
tests/mp8/9/: input1.raw
win32/: cudatimer.cpp
